--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3214,7 +3214,7 @@
 				background-color: #2e3141;
 				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("http://hdqwalls.com/wallpapers/waterfall-iceland-wide.jpg");
 				background-size: auto, cover;
-				background-position: center, bottom;
+				/*background-position: center, bottom;*/
 				margin-bottom: -6.5em;
 			}
 
