--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2735,7 +2735,31 @@
 		overflow-y: hidden;
 		/*height: 200px;*/
 		/*white-space: nowrap;*/
+	}
 
+	/* Let's get this party started */
+	.features::-webkit-scrollbar {
+	    width: 2px;
+	    height: 9px;
+	    margin-top: 10px; 
+	}
+	 
+	/* Track */
+	.features::-webkit-scrollbar-track {
+	    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+	    -webkit-border-radius: 10px;
+	    border-radius: 10px;
+	}
+	 
+	/* Handle */
+	.features::-webkit-scrollbar-thumb {
+	    -webkit-border-radius: 10px;
+	    border-radius: 10px;
+	    background: rgba(255,255,255,0.4); 
+	    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+	}
+	.features::-webkit-scrollbar-thumb:window-inactive {
+		background: rgba(255,255,255,0.4); 
 	}
 
 		.features article {
@@ -2748,6 +2772,7 @@
 			/*display:inline-block;*/
 			/*flex:1;*/
 			/*-webkit-flex:1;*/
+			margin-bottom: 3px !important;
 		}
 
 			.features article:last-child {
@@ -2810,7 +2835,7 @@
 
 				.features article {
 					width: 100%;
-					margin: 0 1em 2em 0 !important;
+					margin: 0 1em 2em 0;
 				}
 
 		}
@@ -4155,6 +4180,11 @@ p.moretips:hover {
 
 .hidemore {
 	margin-bottom: 0px;
+	cursor: pointer;
+}
+
+.seemore {
+	cursor: pointer;
 }
 
 .seemore:before {
