--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1629,7 +1629,7 @@
 
 	body {
 		background-color: white/*#2e3141*/;
-		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("http://hdqwalls.com/wallpapers/waterfall-iceland-wide.jpg");
+		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("bg.jpg");
 		background-size: auto, cover;
 		background-attachment: fixed, fixed;
 		background-position: center, bottom;
