--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3360,6 +3360,9 @@
 
 	#banner {
 		padding: 10em 0 4.75em 0 ;
+		background-size: auto, cover;
+		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("http://hdqwalls.com/wallpapers/waterfall-iceland-wide.jpg");
+		margin-bottom: -6.5em;
 	}
 
 		#banner .inner {
