making main banner local

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3361,7 +3361,7 @@
 	#banner {
 		padding: 10em 0 4.75em 0 ;
 		background-size: auto, cover;
-		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("http://hdqwalls.com/wallpapers/waterfall-iceland-wide.jpg");
+		background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/waterfall-iceland-wide.jpg");
 		margin-bottom: -6.5em;
 	}
 
@@ -3450,7 +3450,7 @@
 			#banner {
 				padding: 7em 0 8.25em 0 ;
 				background-color: #2e3141;
-				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("http://hdqwalls.com/wallpapers/waterfall-iceland-wide.jpg");
+				background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/waterfall-iceland-wide.jpg");
 				background-size: auto, cover;
 				/*background-position: center, bottom;*/
 				margin-bottom: -6.5em;
@@ -3560,7 +3560,7 @@
 		#wrapper > header {
 			padding: 9em 0 6.25em 0 ;
 			background-color: #2e3141;
-			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("http://hdqwalls.com/wallpapers/waterfall-iceland-wide.jpg");
+			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/waterfall-iceland-wide.jpg");
 			background-size: auto, cover;
 			background-position: center, 0% 30%;
 			margin-bottom: -6.5em;
@@ -4068,7 +4068,7 @@
 
 		#footer {
 			background-color: #2e3141;
-			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("http://hdqwalls.com/wallpapers/waterfall-iceland-wide.jpg");
+			background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/waterfall-iceland-wide.jpg");
 			background-size: auto, cover;
 			background-position: center, bottom;
 			margin-top: -6.5em;
